[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Game_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Settings_MM.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.243137, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.00392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_left = 3.87708
margin_top = 2.58472
margin_right = 1025.88
margin_bottom = 602.585
rect_pivot_offset = Vector2( 483.636, 300 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -67.0
margin_top = -28.0
margin_right = 1066.0
margin_bottom = 656.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 729.522
margin_top = 474.721
margin_right = 976.522
margin_bottom = 539.721
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 395.0
margin_top = 344.0
margin_right = 694.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 5 )
text = "Almost nothing here yet ^___^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 91.1869
margin_top = 71.5378
margin_right = 184.187
margin_bottom = 99.5378
custom_fonts/font = SubResource( 6 )
text = "Language:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Label2"]
margin_left = 130.121
margin_top = 36.1526
margin_right = 220.121
margin_bottom = 59.1526
custom_fonts/font = SubResource( 7 )
text = "Русский"

[node name="Button2" type="Button" parent="Label2"]
margin_left = 129.0
margin_top = 7.18549
margin_right = 218.0
margin_bottom = 30.1855
custom_fonts/font = SubResource( 8 )
text = "English"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="button_up" from="Label2/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Label2/Button2" to="." method="_on_Button2_button_up"]
